# marume

./: .gitignore  README.md  go.mod  mise.toml  pyproject.toml
cmd/marume/: main.go
docs/: dpc-coding-sample-cases.md  sqlite-data-sourcing.md
internal/cli/: run.go  run_internal_test.go  run_test.go  schema.go  testdata.go  testdata_test.go
internal/domain/: types.go
internal/evaluator/: evaluator.go  evaluator_test.go
internal/store/: jsonstore.go  jsonstore_test.go  sqlitecodec.go  sqlitestore.go  sqlitestore_test.go  sqlitewriter.go  store.go
internal/testutil/: sqlite.go
scripts/: build_dpc_sample_cases.py  build_sqlite.py  extract_dpc_coding_cases.py  extract_dpc_pdf.py  fetch_mhlw.py  run_workflow.py  transform_dpc.py
skills/dpc-coding/: SKILL.md
src/marume_data/: __init__.py  coding_text.py  extract.py  fetch.py  http.py  models.py  sample_cases.py  sqlite_builder.py  transform.py  workflow.py
testdata/cases/: case-age-diagnosis-without-procedure.json  case-ok.json  cases.jsonl
testdata/rules/: rules-2026.json  rules-2027.json
tests/: conftest.py  helpers.py  test_coding_text.py  test_extract.py  test_extract_dpc_coding_cases_script.py  test_fetch.py  test_pipeline.py  test_sample_cases.py  test_sqlite_builder.py  test_transform.py  test_workflow.py
tests/fixtures/: dpc_rules.csv  manifest.json  manifest_with_pdfs.json  mhlw_dpc_page.html
workflows/: dpc_2026_mhlw.json
