[project]
name = "marume-data"
version = "0.1.0"
description = "Data ingestion and SQLite snapshot builders for marume"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = []

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
